Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/Sales_scheme__c.object-meta.xml
<CustomObject>
    <label>Sales scheme</label>
    <nameField>
        <label>Scheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales schemes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>