Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/fields/amount_per_point__c.field-meta.xml
<CustomField>
    <fullName>amount_per_point__c</fullName>
    <label>Amount per point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>