Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/fields/Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_Amount__c</fullName>
    <label>Budget Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>