Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Sales schemes</relationshipLabel>
    <relationshipName>Sales_schemes</relationshipName>
    <type>Lookup</type>
</CustomField>