Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/fields/Club__c.field-meta.xml
<CustomField>
    <fullName>Club__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Club</label>
    <referenceTo>Club__c</referenceTo>
    <relationshipLabel>Sales schemes</relationshipLabel>
    <relationshipName>Sales_schemes</relationshipName>
    <type>Lookup</type>
</CustomField>