Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/fields/dealer__c.field-meta.xml
<CustomField>
    <fullName>dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a dealer</errorMessage>
        <filterItems>
            <field>Account.Party_Type__c</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales schemes</relationshipLabel>
    <relationshipName>Sales_schemes</relationshipName>
    <type>Lookup</type>
</CustomField>