Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/fields/Distributor_sap__c.field-meta.xml
<CustomField>
    <fullName>Distributor_sap__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor SAP</label>
    <referenceTo>Distributor_sap__c</referenceTo>
    <relationshipLabel>Sales schemes</relationshipLabel>
    <relationshipName>Sales_schemes</relationshipName>
    <type>Lookup</type>
</CustomField>