Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District</label>
    <referenceTo>District__c</referenceTo>
    <relationshipLabel>Sales schemes</relationshipLabel>
    <relationshipName>Sales_schemes</relationshipName>
    <type>Lookup</type>
</CustomField>