Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/fields/Influencer_based__c.field-meta.xml
<CustomField>
    <fullName>Influencer_based__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Influencer based</label>
    <type>Checkbox</type>
</CustomField>