Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/fields/Plumber_club__c.field-meta.xml
<CustomField>
    <fullName>Plumber_club__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plumber club</label>
    <referenceTo>Plumber_club__c</referenceTo>
    <relationshipLabel>Sales schemes</relationshipLabel>
    <relationshipName>Sales_schemes</relationshipName>
    <type>Lookup</type>
</CustomField>