Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/fields/Point_accrual_type__c.field-meta.xml
<CustomField>
    <fullName>Point_accrual_type__c</fullName>
    <label>Point accrual type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRODUCT_VALUE</fullName>
            </value>
            <value>
                <fullName>PER_PRODUCT</fullName>
            </value>
            <value>
                <fullName>TOTAL_BILL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>