Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/fields/Point_per_product__c.field-meta.xml
<CustomField>
    <fullName>Point_per_product__c</fullName>
    <label>Point per product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>