Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Category</label>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipLabel>Sales schemes</relationshipLabel>
    <relationshipName>Sales_schemes</relationshipName>
    <type>Lookup</type>
</CustomField>