Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/fields/Product_filter_type__c.field-meta.xml
<CustomField>
    <fullName>Product_filter_type__c</fullName>
    <label>Product filter type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRODUCT</fullName>
            </value>
            <value>
                <fullName>PRODUCT_CATEGORY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>