Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/fields/Scheme_ID__c.field-meta.xml
<CustomField>
    <fullName>Scheme_ID__c</fullName>
    <displayFormat>SI-{0000}</displayFormat>
    <label>Scheme id</label>
    <type>AutoNumber</type>
</CustomField>