Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/recordTypes/Geography_scheme.recordType-meta.xml
<RecordType>
    <fullName>Geography_scheme</fullName>
    <active>true</active>
    <label>Geography scheme</label>
</RecordType>