Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/recordTypes/Product_scheme.recordType-meta.xml
<RecordType>
    <fullName>Product_scheme</fullName>
    <active>true</active>
    <label>Product scheme</label>
</RecordType>