Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/recordTypes/Seller_scheme.recordType-meta.xml
<RecordType>
    <fullName>Seller_scheme</fullName>
    <active>true</active>
    <label>Seller scheme</label>
</RecordType>