Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/validationRules/amount_per_point.validationRule-meta.xml
<ValidationRule>
    <fullName>amount_per_point</fullName>
    <active>true</active>
    <description>For total bill and product value point type amount per point should be defined</description>
    <errorConditionFormula>AND (
ISPICKVAL(Point_accrual_type__c, &apos;TOTAL_BILL&apos;)  || ISPICKVAL(Point_accrual_type__c, &apos;PRODUCT_VALUE&apos;),
ISBLANK( amount_per_point__c ) 
)</errorConditionFormula>
    <errorDisplayField>amount_per_point__c</errorDisplayField>
    <errorMessage>Product enter amount per point</errorMessage>
</ValidationRule>