Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/validationRules/dealer_distributor_club.validationRule-meta.xml
<ValidationRule>
    <fullName>dealer_distributor_club</fullName>
    <active>true</active>
    <description>Please enter either state, city or district</description>
    <errorConditionFormula>AND( 
RecordType.Name = &apos;Seller scheme&apos;,
( IF(ISBLANK(  dealer__c  ), 1, 0) 
+ IF(ISBLANK(  Distributor_sap__c   ), 1, 0) 
+ IF(ISBLANK(  Club__c  ), 1, 0) 
+ IF(ISBLANK(  Plumber_club__c ), 1, 0) ) &lt; 3
)</errorConditionFormula>
    <errorMessage>Please select only one of dealer, distributor, plumber club and club</errorMessage>
</ValidationRule>