Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/validationRules/dealer_distributor_club_required.validationRule-meta.xml
<ValidationRule>
    <fullName>dealer_distributor_club_required</fullName>
    <active>true</active>
    <description>Please enter either state, city or district</description>
    <errorConditionFormula>AND( 
RecordType.Name = &apos;Seller scheme&apos;,
ISBLANK(  dealer__c  ), 
ISBLANK(  Distributor_sap__c   ), 
ISBLANK(  Club__c  ),
ISBLANK(  Plumber_club__c )
)</errorConditionFormula>
    <errorMessage>Please select one of seller filter: dealer, distributor or club</errorMessage>
</ValidationRule>