Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/validationRules/district_state_city.validationRule-meta.xml
<ValidationRule>
    <fullName>district_state_city</fullName>
    <active>true</active>
    <description>Please enter either state, city or district</description>
    <errorConditionFormula>AND( 
RecordType.Name = &apos;Geography scheme&apos;,
( IF(ISBLANK( City__c ), 1, 0) + 
IF(ISBLANK( District__c ),1, 0) + 
IF(ISBLANK( State__c ), 1, 0) ) &lt; 2
)</errorConditionFormula>
    <errorMessage>Please select only one of city, state and district</errorMessage>
</ValidationRule>