Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/validationRules/district_state_city_one_required.validationRule-meta.xml
<ValidationRule>
    <fullName>district_state_city_one_required</fullName>
    <active>true</active>
    <description>Please enter either state, city or district</description>
    <errorConditionFormula>AND( 
RecordType.Name = &apos;Geography scheme&apos;,
AND (
ISBLANK( City__c ),
ISBLANK( District__c ),
ISBLANK( State__c )
)
)</errorConditionFormula>
    <errorMessage>Please select at least one of city, state and district</errorMessage>
</ValidationRule>