Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/validationRules/point_filter.validationRule-meta.xml
<ValidationRule>
    <fullName>point_filter</fullName>
    <active>true</active>
    <description>Either district or state or city</description>
    <errorConditionFormula>AND( 
 ISPICKVAL( Point_accrual_type__c , &apos;PRODUCT_VALUE&apos;),
 ISBLANK(  amount_per_point__c   ),
 NOT (ISBLANK( Point_per_product__c  ))
)</errorConditionFormula>
    <errorMessage>Please enter &apos;Point per product&apos;  value and leave &apos;Amount per point&apos; &apos;None&apos;</errorMessage>
</ValidationRule>