Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/validationRules/point_filter_bill_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>point_filter_bill_amount</fullName>
    <active>true</active>
    <description>Either district or state or city</description>
    <errorConditionFormula>AND( 
 ISPICKVAL( Point_accrual_type__c , &apos;TOTAL_BILL&apos;),
 NOT (ISBLANK(  Point_per_product__c )),
 NOT (ISBLANK( amount_per_point__c  ))
)</errorConditionFormula>
    <errorDisplayField>Point_accrual_type__c</errorDisplayField>
    <errorMessage>Point accrual type PER_PRODUCT  &apos;Amount per point&apos; should be provided and &apos;Point per product&apos; should be empty</errorMessage>
</ValidationRule>