Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/validationRules/Point_per_product.validationRule-meta.xml
<ValidationRule>
    <fullName>Point_per_product</fullName>
    <active>true</active>
    <description>For total bill and product value point type amount per point should be defined</description>
    <errorConditionFormula>AND (
ISPICKVAL(Point_accrual_type__c, &apos;PER_PRODUCT&apos;),
ISBLANK( Point_per_product__c  ) 
)</errorConditionFormula>
    <errorDisplayField>Point_per_product__c</errorDisplayField>
    <errorMessage>Product enter point per product</errorMessage>
</ValidationRule>