Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/validationRules/product_point_type.validationRule-meta.xml
<ValidationRule>
    <fullName>product_point_type</fullName>
    <active>true</active>
    <description>Either district or state or city</description>
    <errorConditionFormula>AND
(
OR( 
 ISPICKVAL( Point_accrual_type__c , &apos;PRODUCT_VALUE&apos;),
 ISPICKVAL( Point_accrual_type__c , &apos;PER_PRODUCT&apos;)
),
AND ( 
  ISBLANK( Product__c ),
  ISBLANK( Product_Category__c )
))</errorConditionFormula>
    <errorMessage>Please select either a product or product category for Point accrual type &apos;PER_PRODUCT&apos; or &apos;PRODUCT_VALUE&apos;</errorMessage>
</ValidationRule>