Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/validationRules/product_scheme_product_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>product_scheme_product_mandatory</fullName>
    <active>true</active>
    <description>Either district or state or city</description>
    <errorConditionFormula>AND( 
RecordType.Name = &apos;Product scheme&apos;,
ISPICKVAL( Product_filter_type__c, &apos;&apos;  )
)</errorConditionFormula>
    <errorDisplayField>Product_filter_type__c</errorDisplayField>
    <errorMessage>Product filter is mandatory for product schemes</errorMessage>
</ValidationRule>