Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/validationRules/start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>start_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
ISCHANGED(Start_date__c),
Start_date__c &lt;  TODAY()
)</errorConditionFormula>
    <errorDisplayField>Start_date__c</errorDisplayField>
    <errorMessage>Please enter a start date greater than or equal to today</errorMessage>
</ValidationRule>