Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/validationRules/start_date_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>start_date_end_date</fullName>
    <active>true</active>
    <errorConditionFormula>Start_date__c &gt;  End_date__c</errorConditionFormula>
    <errorDisplayField>End_date__c</errorDisplayField>
    <errorMessage>End date should be greater than or equal to start date</errorMessage>
</ValidationRule>