Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/validationRules/total_bill.validationRule-meta.xml
<ValidationRule>
    <fullName>total_bill</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Point_accrual_type__c , &apos;TOTAL_BILL&apos;),
ISBLANK( amount_per_point__c ),
NOT (ISBLANK( Point_per_product__c ))
)</errorConditionFormula>
    <errorDisplayField>Point_accrual_type__c</errorDisplayField>
    <errorMessage>Amount per point is needed for Total bill type and point per product should be blank</errorMessage>
</ValidationRule>