Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/validationRules/total_bill_point_type_product_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>total_bill_point_type_product_empty</fullName>
    <active>true</active>
    <description>Product should be enpty for total bill point accrual</description>
    <errorConditionFormula>AND (
ISPICKVAL(Point_accrual_type__c, &apos;TOTAL_BILL&apos;),
OR (
 ISPICKVAL(Product_filter_type__c, &apos;PRODUCT&apos;),
 ISPICKVAL(Product_filter_type__c, &apos;PRODUCT_CATEGORY&apos;),
 NOT( ISBLANK( Product_Category__c )),
 NOT( ISBLANK(  Product__c  ))  
)
)</errorConditionFormula>
    <errorDisplayField>Product_filter_type__c</errorDisplayField>
    <errorMessage>Product filter type, product and product category should be empty for point accrual on total bill</errorMessage>
</ValidationRule>