Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/validationRules/total_bill_product.validationRule-meta.xml
<ValidationRule>
    <fullName>total_bill_product</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL( Point_accrual_type__c , &apos;TOTAL_BILL&apos;),
OR (
NOT (ISBLANK(  Product_Category__c  )),
NOT (ISBLANK(  Product__c   ))
)
)</errorConditionFormula>
    <errorDisplayField>Point_accrual_type__c</errorDisplayField>
    <errorMessage>For total bill type product category and product should not be specified</errorMessage>
</ValidationRule>