Partial_14Dec2021/force-app/main/default/objects/Sales_scheme__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Point_accrual_type__c</columns>
    <columns>Point_per_product__c</columns>
    <columns>amount_per_point__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Is_active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>